--- a/main.css
+++ b/main.css
@@ -8,10 +8,7 @@ a {
     color: #1565c0;
 }
 
-/*!*Bold*!*/
-/*b {*/
-/*    font-weight: 900;*/
-/*}*/
+
 
 body.home {
     background-image: url("background.jpeg");
@@ -23,13 +20,15 @@ body.papers {
 
 /* CSS for the navigation bar */
 .navbar {
+    position: fixed;
+    width: 100%;
     background-color:  #FFE6EE;
     color: #333;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 15px;
-    font-family: 'Delius'
+    font-family: 'Delius';
 }
 
 .title {
@@ -41,7 +40,8 @@ body.papers {
 nav ul {
     list-style-type: none;
     margin: 0;
-    padding: 0;
+    padding:0;
+    padding-right: 100px;
     display: flex;
 }
 
@@ -73,6 +73,7 @@ a:hover {
     top: 50%;
     left: 50%;
     margin-right: -50%;
+    margin-top: 100px;
     transform: translate(-50%, -50%) ;
     text-align: center;
     justify-content: center;
@@ -80,7 +81,7 @@ a:hover {
 }
 
 .content p {
-    text-align: justify;
+    text-align: center;
     max-width: 600px;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -88,8 +89,10 @@ a:hover {
 
 .avatar {
     border-radius: 30%;
-    width: 550px;
+    width: 40%;
+    height: auto;
     filter: grayscale(100%);
+    padding: 10px;
 }
 
 
@@ -152,6 +155,9 @@ section {
     display: inline-flex;
 }
 
+.section p{
+    padding-top: 100px;
+}
 section img {
     max-width: 100%;
     height: auto;
