--- a/main.css
+++ b/main.css
@@ -58,12 +58,6 @@ nav ul li a:hover {
     text-decoration: bold;
 }
 
-.container {
-    display: flex;
-    justify-content: space-between;
-    align-items:center;
-}
-
 a:hover {
     color: #3b21e77c;
 }
@@ -86,15 +80,6 @@ a:hover {
     padding-top: 10px;
     padding-bottom: 10px;
 }
-
-.avatar {
-    border-radius: 30%;
-    width: 40%;
-    height: auto;
-    filter: grayscale(100%);
-    padding: 10px;
-}
-
 
 
 .icons {
@@ -128,11 +113,14 @@ a:hover {
     justify-content: center;
     text-align: justify;
     padding-top: 100px;
+    word-wrap: break-word;
 }
 
 .paper-entry img {
-    width: 300px;
+    width: 30%;
+    height: auto;
     margin-right: 20px;
+    max-width: 300px;
 }
 
 .reference h3 {
@@ -157,6 +145,7 @@ section {
 
 .section p{
     padding-top: 100px;
+    word-wrap: break-word;
 }
 section img {
     max-width: 100%;
@@ -177,4 +166,59 @@ section img {
     height: 75px;
     margin: auto;
     display: block;
+}
+
+/* Hamburger menu styles */
+.menu-toggle {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+    padding: 10px;
+}
+
+.menu-toggle div {
+    width: 30px;
+    height: 3px;
+    background-color: #333;
+    margin: 5px 0;
+}
+@media (max-width: 768px) {
+    .content p, .reference p, .paper-entry h3, .section p {
+        word-wrap: break-word;
+        white-space: normal;
+        width: 100%;
+    }
+
+    nav ul {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        right: 0;
+        background-color: #FFE6EE;
+        width: 100%;
+        text-align: center;
+    }
+
+    nav ul.nav-active {
+        display: flex;
+    }
+
+
+    nav ul li {
+        margin: 10px 0;
+    }
+
+    .menu-toggle {
+        display: flex;
+    }
+
+    /* School divs adjustments for smaller screens */
+    section {
+             display: block; /* Change to block to stack them */
+             width: 90%; /* Adjust width to fill the container */
+             margin: 15px auto; /* Center the divs */
+         }
+
+
 }
